# farm-bundle-size-analyzer

./: .gitignore  Cargo.toml  LICENSE  LICENSE_GUIDE.md  README.md  index.js  package.json  postinstall.js  rust-toolchain.toml
benches/: plugin_benchmark.rs
npm-package/: index.js  package.json  postinstall.js
npm-package/darwin-arm64/: libfarm_bundle_size_analyzer.dylib  libfarm_bundle_size_analyzer.dylib.farm
npm-package/darwin-x64/: libfarm_bundle_size_analyzer.dylib
scripts/: test.sh
src/: lib.rs
test-farm-project/: package-lock.json  package.json
test-farm-project/src/: index.js  style.css
tests/: integration_tests.rs
