[package]
name = "farm-bundle-size-analyzer"
version = "0.1.0"
edition = "2021"
description = "A Farm.js plugin to analyze bundle sizes in terminal"
license = "MIT"
repository = "https://github.com/yourusername/farm-bundle-size-analyzer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = "0.7.3"
farmfe_macro_plugin = "0.0.4"

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
# 测试相关依赖
farmfe_core = "0.7.3"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "plugin_benchmark"
harness = false